--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": ["heroku"],
+  "keywords": [
+    "heroku"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/openai": "^0.0.9",
     "@types/forge-viewer": "^7.69.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
-    "forge-apis": "^0.9.8"
+    "forge-apis": "^0.9.8",
+    "langchain": "^0.0.214",
+    "openai": "^4.24.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
