--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-formidable": "^1.2.0",
     "forge-apis": "^0.9.8",
     "langchain": "^0.0.214",
+    "moment-timezone": "^0.5.44",
     "openai": "^4.24.1"
   },
   "devDependencies": {
