--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "forge-apis": "^0.9.8",
+    "ignore": "^5.3.0",
     "langchain": "^0.0.214",
     "moment-timezone": "^0.5.44",
-    "openai": "^4.24.1"
+    "openai": "^4.24.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
