--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/core": "^0.1.49",
     "@langchain/openai": "^0.0.9",
     "@types/forge-viewer": "^7.69.9",
     "body-parser": "^1.20.2",
