--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "langchain": "^0.0.214",
     "moment-timezone": "^0.5.44",
     "openai": "^4.24.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
