--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@langchain/openai": "^0.0.9",
     "@types/forge-viewer": "^7.69.9",
     "body-parser": "^1.20.2",
+    "cesium": "^1.121.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
